--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "4.8.4"
   }
 }
