--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.10.0",
+    "@mantine/dates": "^5.10.0",
+    "@mantine/form": "^5.10.0",
+    "@mantine/hooks": "^5.10.0",
+    "@mantine/notifications": "^5.10.0",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "next": "^13.0.2",
     "react": "^18.2.0",
