--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "2.8.3",
     "typescript": "4.8.4"
   }
 }
