--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.21",
     "prettier": "2.8.3",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   }
 }
