--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/form": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
     "@mantine/notifications": "^5.10.0",
+    "@prisma/client": "^4.9.0",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "next": "^13.0.2",
