--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "npx prettier --write ."
+    "prettier": "npx prettier --write .",
+    "db:push": "npx prisma db push"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
