--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mantine-datatable": "^1.7.35",
     "next": "^13.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
