--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/dates": "^5.10.0",
     "@mantine/form": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
+    "@mantine/modals": "^5.10.2",
     "@mantine/notifications": "^5.10.0",
     "@prisma/client": "^4.9.0",
     "dayjs": "^1.11.7",
