--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mantine/hooks": "^5.10.0",
     "@mantine/modals": "^5.10.2",
     "@mantine/notifications": "^5.10.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "mantine-datatable": "^1.7.35",
     "next": "^13.0.2",
+    "next-auth": "^4.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tabler-icons-react": "^1.56.0"
