--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
+  },
+  "prisma": {
+    "schema": "db/schema.prisma"
   }
 }
