--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
-    "prettier": "2.8.3",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
