--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "npx prettier --write .",
-    "db:push": "npx prisma db push",
+    "prettier": "prettier --write .",
+    "db:push": "prisma db push",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -35,8 +35,10 @@
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.25.0",
+    "eslint": "^8.25.0",
     "eslint-config-next": "^13.0.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -46,13 +48,13 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   },
   "prisma": {
     "schema": "db/schema.prisma"
   },
   "lint-staged": {
     "*.{tsx,ts}": "eslint --cache --fix --cache-location './node_modules/@eslint/.eslintcache/'",
-    "*.{tsx,ts,css,md}": "prettier --write"
+    "*.{tsx,ts,css,md,json}": "prettier --write"
   }
 }
