--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
@@ -43,6 +45,8 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
