--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "@api/*": ["src/pages/api/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.js"],
   "exclude": ["node_modules"]
 }
