--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^4.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^2.0.3",
     "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
