--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "prettier": "prettier --write .",
     "db:push": "prisma db push",
+    "studio": "prisma studio",
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "jest --watch"
