--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
+    "next-router-mock": "^0.9.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
