--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.4.2",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^27.5.1",
+    "jest-mock-extended": "^3.0.1",
     "next-router-mock": "^0.9.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
