--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.10.1",
     "tailwindcss": "^3.2.4",
+    "ts-jest": "^27.1.5",
     "typescript": "^4.8.4"
   },
   "prisma": {
