--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
     "dayjs": "^1.11.7",
+    "dotenv-cli": "^7.0.0",
     "lodash": "^4.17.21",
     "mantine-datatable": "^1.7.35",
     "next": "^13.0.2",
