--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: "3.9"
 
 services:
-  db:
-    image: postgres:13
+  db-dev:
+    image: postgres
     restart: always
-    container_name: budget-io-postgres-test
+    container_name: postgres-dev
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: dev
+  db-test:
+    image: postgres
+    restart: always
+    container_name: postgres-test
     ports:
       - "5433:5432"
     environment:
