🔨 sync db with schema before testing

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "studio": "prisma studio",
     "studio:test": "dotenv -e .env.test -- prisma studio",
     "prepare": "husky install",
-    "test": "jest -i",
-    "test:watch": "jest -i --watch",
+    "test": "prisma db push && jest -i",
     "up": "docker-compose up -d",
     "down": "docker-compose down"
   },
