--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
+    "jest-extended": "^3.2.4",
     "jest-mock-extended": "^3.0.1",
     "next-router-mock": "^0.9.1",
     "postcss": "^8.4.21",
