--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prepare": "husky install",
     "test": "prisma db push && jest -i",
     "up": "docker-compose up -d",
-    "down": "docker-compose down"
+    "down": "docker-compose down",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -47,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.6.0",
     "eslint": "^8.25.0",
     "eslint-config-next": "^13.0.2",
     "eslint-config-prettier": "^8.6.0",
