--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "prettier": "prettier --write .",
     "db:push": "prisma db push",
     "studio": "prisma studio",
-    "studio:test": "dotenv -e .env.test -- prisma studio",
     "prepare": "husky install",
-    "test": "prisma db push && jest -i",
+    "test": "jest -i",
     "up": "docker-compose up -d",
     "down": "docker-compose down",
     "cypress:open": "cypress open"
