--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@prisma/client": "^4.10.1",
     "dayjs": "^1.11.7",
     "dotenv-cli": "^7.0.0",
-    "lodash": "^4.17.21",
+    "lodash.sortby": "^4.7.0",
     "mantine-datatable": "^1.7.35",
     "next": "^13.0.2",
     "next-auth": "^4.19.1",
